autofocus search box

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 
 <div class="centered" >
 <form method="post" action="http://52.10.132.16:3000">
-<input type="text" name = "a" value="">
+<input type="text" name = "a" value="" autofocus />
 </div>
 
 <div class="smCent" >
